--- a/MVCMuncheese/Views/DetalleOrden/listarDetalleOrden_PA.cshtml
+++ b/MVCMuncheese/Views/DetalleOrden/listarDetalleOrden_PA.cshtml
@@ -70,8 +70,8 @@
             </td>
             <td>
                 @Html.ActionLink("Editar", "modificarDetalleOrden_PA", new { pId = item.Id_Detalle }) |
-                @Html.ActionLink("Detalle", "detalleDetalleOrden_PA", new { pId = item.Id_Detalle }) |
-                @Html.ActionLink("Borrar", "eliminarDetalleOrden_PA", new { pId = item.Id_Detalle })
+                @Html.ActionLink("Detalle", "detalleDetalleOrden_PA", new { pId = item.Id_Detalle }) @*|
+                @Html.ActionLink("Borrar", "eliminarDetalleOrden_PA", new { pId = item.Id_Detalle })*@
             </td>
         </tr>
     }
