--- a/MVCMuncheese/Views/Login/errorPass.cshtml
+++ b/MVCMuncheese/Views/Login/errorPass.cshtml
@@ -12,7 +12,7 @@
             <div class="modal-header">
                 <h1>Sistema ABCD</h1>
             </div>
-            <span style="color: black; font-size:14px; margin-left:10px;">
+            <span style="color: white; font-size:14px; margin-left:10px;">
                 <img class="manImg" src="~/Img/oops.jpg" height="50" width="50">
                 La contraseña es incorrecta, por favor verifique.
             </span>
