--- a/MVCMuncheese/Views/Login/errorUsuario.cshtml
+++ b/MVCMuncheese/Views/Login/errorUsuario.cshtml
@@ -13,7 +13,7 @@
             <div class="modal-header">
                 <h1>SFMFT</h1>
             </div>
-            <span style="color: black; font-size:14px; margin-left:10px;">
+            <span style="color: white; font-size:14px; margin-left:10px;">
                 <img class="manImg" src="~/Img/oops.jpg" height="50" width="50">
                 El usuario no existe, por favor verifique.
             </span>
