--- a/MVCMuncheese/Views/Mesas/listarMesas_PA.cshtml
+++ b/MVCMuncheese/Views/Mesas/listarMesas_PA.cshtml
@@ -38,8 +38,8 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "modificarMesas_PA", new { pId=item.Id_Mesa }) |
-            @Html.ActionLink("Detalle", "detalleMesas_PA", new { pId = item.Id_Mesa }) |
-            @Html.ActionLink("Borrar", "eliminarMesas_PA", new { pId = item.Id_Mesa })
+            @Html.ActionLink("Detalle", "detalleMesas_PA", new { pId = item.Id_Mesa }) @*|
+            @Html.ActionLink("Borrar", "eliminarMesas_PA", new { pId = item.Id_Mesa })*@
         </td>
     </tr>
 }
