--- a/MVCMuncheese/Views/Ordenes/listarOrdenes_ENT.cshtml
+++ b/MVCMuncheese/Views/Ordenes/listarOrdenes_ENT.cshtml
@@ -39,8 +39,8 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "modificarOrdenes_ENT", new { pId = item.Id_Orden }) |
-            @Html.ActionLink("Detalle", "detalleOrdenes_ENT", new { pId = item.Id_Orden }) |
-            @Html.ActionLink("Borrar", "eliminarOrdenes_ENT", new { pId = item.Id_Orden })
+            @Html.ActionLink("Detalle", "detalleOrdenes_ENT", new { pId = item.Id_Orden }) @*|
+            @Html.ActionLink("Borrar", "eliminarOrdenes_ENT", new { pId = item.Id_Orden })*@
 
         </td>
     </tr>
