--- a/MVCMuncheese/Views/PerfilUsuario/listarPerfilUsuario_PA.cshtml
+++ b/MVCMuncheese/Views/PerfilUsuario/listarPerfilUsuario_PA.cshtml
@@ -36,9 +36,9 @@
         </td>*@
         <td>
             @Html.ActionLink("Editar", "modificarPerfilUsuario_PA", new { pId=item.Id_PerfilUsuario }) |
-            @Html.ActionLink("Detalle", "detallePerfilUsuario_PA", new { pId = item.Id_PerfilUsuario }) |
+            @Html.ActionLink("Detalle", "detallePerfilUsuario_PA", new { pId = item.Id_PerfilUsuario }) @*|
             @Html.ActionLink("Borrar", "eliminarPerfilUsuario_PA", new { pId = item.Id_PerfilUsuario })
-        </td>
+        </td>*@
     </tr>
 }
 
