--- a/MVCMuncheese/Views/Perfiles/listarPerfiles_PA.cshtml
+++ b/MVCMuncheese/Views/Perfiles/listarPerfiles_PA.cshtml
@@ -30,8 +30,8 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "modificarPerfiles_PA", new { pId=item.Perfil_Id }) |
-            @Html.ActionLink("Detalle", "detallePerfiles_PA", new { pId = item.Perfil_Id }) |
-            @Html.ActionLink("Borrar", "eliminarPerfiles_PA", new { pId = item.Perfil_Id })
+            @Html.ActionLink("Detalle", "detallePerfiles_PA", new { pId = item.Perfil_Id }) @*|
+            @Html.ActionLink("Borrar", "eliminarPerfiles_PA", new { pId = item.Perfil_Id })*@
         </td>
     </tr>
 }
