--- a/MVCMuncheese/Views/Tipo_Producto/listarTipo_Producto_ENT.cshtml
+++ b/MVCMuncheese/Views/Tipo_Producto/listarTipo_Producto_ENT.cshtml
@@ -32,8 +32,8 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "modificarTipo_Producto_ENT", new { pId = item.Id_tipo_Producto }) |
-            @Html.ActionLink("Detalle", "detalleTipo_Producto_ENT", new { pId = item.Id_tipo_Producto }) |
-            @Html.ActionLink("Borrar", "eliminarTipo_Producto_ENT", new { pId = item.Id_tipo_Producto })
+            @Html.ActionLink("Detalle", "detalleTipo_Producto_ENT", new { pId = item.Id_tipo_Producto }) 
+            @*@Html.ActionLink("Borrar", "eliminarTipo_Producto_ENT", new { pId = item.Id_tipo_Producto })*@
         </td>
     </tr>
 }
