--- a/MVCMuncheese/Views/Usuarios/listarUsuarios_PA.cshtml
+++ b/MVCMuncheese/Views/Usuarios/listarUsuarios_PA.cshtml
@@ -36,9 +36,9 @@
         </td>
         <td class="col-md-3">
             @Html.ActionLink("Editar", "modificarUsuarios_PA", new { pId=item.Usuario }) |
-            @Html.ActionLink("Detalle", "detalleUsuarios_PA", new { pId = item.Usuario }) |
+            @Html.ActionLink("Detalle", "detalleUsuarios_PA", new { pId = item.Usuario }) @*|
             @Html.ActionLink("Borrar", "eliminarUsuarios_PA", new { pId = item.Usuario })
-        </td>
+        </td>*@
     </tr>
 }
 
