--- a/MVCMuncheese/Views/Home/TotalDia.cshtml
+++ b/MVCMuncheese/Views/Home/TotalDia.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MVCMuncheese.Models.modeloDetalleOrden
 @{
     ViewBag.Title = "TotalDia";
 }
@@ -6,53 +6,79 @@
 <h4 style="padding-top:4px;">Total del Dia</h4>
 
 <nav class="navbar navbar-default col-md-12" style="padding-top:10px;">
-    <div class="container-fluid col-md-2">
+    <div class="container-fluid col-md-5">
 
-        <div class="col-md-12">
-            <div>
-                <h4 style="font-size:14px;">Ventas Local</h4>
+        <div class="container">
+            <div class="form-horizontal">
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.VentasLocal, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-2">
+                        @Html.TextBoxFor(model => model.VentasLocal, new { @class = "form-control", id = "VentasLocal" })
+                        @Html.ValidationMessageFor(model => model.VentasLocal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.VentasLlevar, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-2">
+                        @Html.TextBoxFor(model => model.VentasLlevar, new { @class = "form-control", id = "VentasLlevar" })
+                        @Html.ValidationMessageFor(model => model.VentasLlevar, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.TotalVentas, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-2">
+                        @Html.TextBoxFor(model => model.TotalVentas, new { @class = "form-control", id = "TotalVentas" })
+                        @Html.ValidationMessageFor(model => model.TotalVentas, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
             </div>
         </div>
 
-        <div class="col-md-12">
-            <div>
-                <h4 style="font-size:14px;">Ventas para llevar</h4>
-            </div>
-        </div>
-
-        <div class="col-md-12">
-            <div>
-                <h4 style="font-size:14px;">Total de ventas</h4>
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="container-fluid col-md-10">
-        <div class="col-md-12">
-            <div>
-                <input type="text" class="form-control" id="telefono" placeholder="" style="width:200px; height:35px">
-            </div>
-        </div>
-
-        <div class="col-md-12">
-            <div>
-                <input type="text" class="form-control" id="telefono" placeholder="" style="width:200px; height:35px">
-            </div>
-        </div>
-
-        <div class="col-md-12">
-            <div>
-                <input type="text" class="form-control" id="telefono" placeholder="" style="width:200px; height:35px">
+        <div class="form-group col-md-12" style="text-align:right">
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="button" class="btn btn-primary" id="calcular-btn">Calcular</button>
             </div>
         </div>
     </div>
 
-    <div class="form-group col-md-4" style="text-align:right">
-        <div class="col-lg-10 col-lg-offset-2">
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-        </div>
-    </div>
+
 
 </nav>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function cargarDatos() {
+        var fecha = '@DateTime.Today.ToString("yyyy-MM-dd")';
+
+        $.getJSON('@Url.Action("VentasLlevar")', { fecha: fecha }, function (data) {
+            $('#VentasLlevar').val(data);
+        });
+
+        $.getJSON('@Url.Action("VentasLocal")', { fecha: fecha }, function (data) {
+            $('#VentasLocal').val(data);
+        });
+
+        @*$.getJSON('@Url.Action("TotalVentas")', { fecha: fecha }, function (data) {
+            $('#TotalVentas').val(data);
+        });*@
+    }
+
+    // Llama a la función cargarDatos cuando la página se carga
+    $(document).ready(function () {
+        cargarDatos();
+    });
+
+    $(document).ready(function () {
+        $('#calcular-btn').on('click', function () {
+            var ventasLocal = parseFloat($('#VentasLocal').val());
+            var ventasLlevar = parseFloat($('#VentasLlevar').val());
+            var totalVentas = ventasLocal + ventasLlevar;
+
+            $('#TotalVentas').val(totalVentas.toFixed(0));
+        });
+    });
+</script>
