--- a/MVCMuncheese/Views/Inventario/modificarInventario_PA.cshtml
+++ b/MVCMuncheese/Views/Inventario/modificarInventario_PA.cshtml
@@ -10,10 +10,10 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Inventario</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h4>Inventario</h4>
+    <hr />
+    @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Id_inventario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -44,26 +44,51 @@
                 @Html.EditorFor(model => model.Id_Producto, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Id_Producto, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id_Ingrediente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Id_Ingrediente, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Id_Ingrediente, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" name="enviarAccion" value="Modificar"
-                        class="btn btn-primary" title="Modificar registro"
-                        data-toggle="tooltip" data-container="body" data-placement="right">
-                    Modificar
-                </button>
-            </div>
+        </div>*@
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Id_inventario, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Id_inventario)
+            @Html.HiddenFor(model => model.Id_inventario)
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Nombre_Producto, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Nombre_Producto)
+            @Html.HiddenFor(model => model.Nombre_Producto)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Id_Producto, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Id_Producto)
+            @Html.HiddenFor(model => model.Id_Producto)
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button type="submit" name="enviarAccion" value="Modificar"
+                    class="btn btn-primary" title="Modificar registro"
+                    data-toggle="tooltip" data-container="body" data-placement="right">
+                Modificar
+            </button>
+        </div>
+    </div>
+</div>
 }
 
 <div>
