--- a/MVCMuncheese/Views/Proveedores/listarProveedores_PA.cshtml
+++ b/MVCMuncheese/Views/Proveedores/listarProveedores_PA.cshtml
@@ -54,9 +54,9 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "modificarProveedores_PA", new { pId=item.Id_Proveedor }) |
-            @Html.ActionLink("Detalle", "detalleProveedores_PA", new { pId = item.Id_Proveedor }) |
+            @Html.ActionLink("Detalle", "detalleProveedores_PA", new { pId = item.Id_Proveedor }) @*|
             @Html.ActionLink("Borrar", "eliminarProveedores_PA", new { pId = item.Id_Proveedor })
-        </td>
+        </td>*@
     </tr>
 }
 
